--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
-{   "name" : "Lessmin"
-    , "version" : "0.1"
+{   "name" : "lessmin"
+    , "version" : "0.0.1-1"
     , "description" : "Less code minimizer tool without compilation."
     , "main" : "lessmin/index.js"
 }
